k8s/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-canary
  namespace: nodejs-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
      version: canary
  template:
    metadata:
      labels:
        app: nodejs-app
        version: canary
    spec:
      containers:
        - name: nodejs-app
          image: jeswindcoutho/nodejs-devops-project:2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
