k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nodejs-app-rollout
  namespace: nodejs-devops

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nodejs-rollout

  template:
    metadata:
      labels:
        app: nodejs-rollout

    spec:
      containers:
        - name: nodejs-app
          image: jeswindcoutho/nodejs-devops-project:1
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

  strategy:
    canary:
      stableService: nodejs-rollout-stable
      canaryService: nodejs-rollout-canary

      trafficRouting:
        nginx:
          stableIngress: nodejs-rollout-ingress

      steps:
        - setWeight: 10
        - analysis:
            templates:
              - templateName: nodejs-canary-analysis

        - setWeight: 25
        - analysis:
            templates:
              - templateName: nodejs-canary-analysis

        - setWeight: 50
        - analysis:
            templates:
              - templateName: nodejs-canary-analysis
