k8s/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-canary-service
  namespace: nodejs-devops
spec:
  type: NodePort
  selector:
    app: nodejs-app
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30081
