k8s/rollout-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-rollout-canary
  namespace: nodejs-devops
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: nodejs-rollout
