k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: nodejs-devops
  labels:
    app: nodejs-app
    version: stable
spec:
  type: NodePort
  selector:
    app: nodejs-app
    version: stable
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
