k8s/rollout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-rollout-ingress
  namespace: nodejs-devops
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-rollout-stable
                port:
                  number: 80
